<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Busca CEP com Mapa</string>
    <string name="action_settings">Ajustes</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="historico_titulo">Histórico</string>
    <string name="cep">CEP</string>
    <string name="cep_nao_encontrado">CEP não encontrado</string>
    <string name="erro_ao_buscar_cep">Erro ao buscar o CEP</string>
    <string name="buscando_cep">Buscando CEP</string>
    <string name="aguarde">Aguarde</string>
    <string name="insira_um_cep">Insira um CEP</string>
    <string name="buscar_cep">BUSCAR CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="parece_que_nao_ha">Parece que não há internet disponível</string>
    <string name="mascaraHint" translatable="false">00000-000</string>
    <string name="endereco">Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="mapa">Mapa</string>
    <string name="app_email" translatable="false">buscacepcommapa@gmail.com</string>
    <string name="asass">asas</string>
    <string name="ola">ola2</string>

</resources>
