<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="mod"
            type="com.leonardoserra.buscacepcommapa.vm.MainViewModel" />
    </data>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="com.leonardoserra.testetheme.PrincipalActivity">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <ScrollView
                android:id="@+id/resultadoScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                tools:context="com.leonardoserra.buscacepcommapa.MainActivity"
                tools:showIn="@layout/activity_main"
                android:background="#ffff3f">

                <RelativeLayout
                    android:id="@+id/layout_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffff3f"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/insiraTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="32dp"
                        android:gravity="center"
                        android:hint="@string/insira_um_cep"
                        android:text="@string/insira_um_cep"
                        android:textAlignment="center"
                        android:textColor="#303F9F"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/cepEditText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/insiraTextView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/white"
                        android:gravity="center_horizontal"
                        android:hint="@string/mascaraHint"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:padding="8dp"
                        android:text="@{mod.cep}"
                        android:textAlignment="center"
                        android:textSize="40sp" />

                    <Button
                        android:id="@+id/buscarCepButton"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/cepEditText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/buscar_cep"
                        android:textAlignment="center"
                        android:textColor="#222222"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/enderecoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/buscarCepButton"
                        android:layout_marginTop="60dp"
                        android:text="@string/endereco"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        style="@style/SubTitulo"/>

                    <EditText
                        android:id="@+id/logradouroEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/enderecoTextView"
                        android:hint="@string/logradouro"
                        android:text="@{mod.logradouro}" />

                    <EditText
                        android:id="@+id/bairroEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/logradouroEditText"
                        android:hint="@string/bairro"
                        android:text="@{mod.bairro}" />

                    <EditText
                        android:id="@+id/cidadeEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/bairroEditText"
                        android:hint="@string/cidade"
                        android:text="@{mod.cidade}" />

                    <EditText
                        android:id="@+id/ufEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/cidadeEditText"
                        android:hint="@string/uf"
                        android:text="@{mod.uf}" />

                    <TextView
                        android:id="@+id/mapaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ufEditText"
                        android:layout_marginTop="32dp"
                        android:text="@string/mapa"
                        style="@style/SubTitulo" />

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="290dp"
                        android:layout_below="@id/mapaTextView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        tools:layout="@layout/maps_fragment" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/map"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="-6dp"
                        android:layout_marginRight="-6dp"
                        android:layout_marginTop="-24dp"
                        android:onClick="vaiAoTopo"
                        android:src="@android:drawable/arrow_up_float" />

                    <ProgressBar
                        android:id="@+id/pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/map"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="83dp"
                        android:indeterminate="false"
                        android:visibility="@{mod.progressBar ? View.VISIBLE : View.GONE}" />

                </RelativeLayout>

            </ScrollView>


        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_navigation_drawer"
            app:menu="@menu/activity_main_drawer" />

    </android.support.v4.widget.DrawerLayout>
</layout>